force-app/main/default/objects/Program_Metrics__c/fields/Meeting_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Expenses__c</fullName>
    <description>Meetings expenses for this reporting period.</description>
    <inlineHelpText>Enter meeting expenses for this reporting period.</inlineHelpText>
    <label>Meeting Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>