force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Advocacy__c</fullName>
    <description>How many members participated in activities supporting advocacy goals?</description>
    <inlineHelpText>How many members participated in activities supporting advocacy goals?</inlineHelpText>
    <label>Member Participation:Advocacy</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>