force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_All_Other__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_All_Other__c</fullName>
    <description>How many members (total) participated this year with other programs/events/activities not mentioned in this record?</description>
    <inlineHelpText>How many members (total) participated this year with other programs/events/activities not mentioned in this record?</inlineHelpText>
    <label>Member Participation: All Other</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>