force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Day_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Day_of_Service__c</fullName>
    <description>How many members (total) participated in this year&#39;s AARP Day of Service event?</description>
    <inlineHelpText>How many members (total) participated in this year&#39;s AARP Day of Service event?</inlineHelpText>
    <label>Member Participation: Day of Service</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>