force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Driver_Safety__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Driver_Safety__c</fullName>
    <description>How many members (total) participated this year with AARP&#39;s Driver Safety program?</description>
    <inlineHelpText>How many members (total) participated this year with AARP&#39;s Driver Safety program?</inlineHelpText>
    <label>Member Participation: Driver Safety</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>