force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Fundraising__c</fullName>
    <description>How many members (total) participated this year with fundraising for community service programs?</description>
    <inlineHelpText>How many members (total) participated this year with fundraising for community service programs?</inlineHelpText>
    <label>Member Participation:Fundraising</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>