force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Health_Wellness__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Health_Wellness__c</fullName>
    <description>How many members (total) participated in this year’s Chapter Health and Wellness programs?</description>
    <inlineHelpText>How many members (total) participated in this year’s Chapter Health and Wellness programs?</inlineHelpText>
    <label>Member Participation:Health &amp; Wellness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>