force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Hunger__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Hunger__c</fullName>
    <description>How many members participated in programs that support fight of hunger?</description>
    <inlineHelpText>How many members participated in programs that support fight of hunger?</inlineHelpText>
    <label>Member Participation:Hunger</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>