force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_LTC_Nursing_Home__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_LTC_Nursing_Home__c</fullName>
    <description>How many members (total) participated in this year’s Chapter LTC and Nursing programs?</description>
    <inlineHelpText>How many members (total) participated in this year’s Chapter LTC and Nursing programs?</inlineHelpText>
    <label>Member Participation:LTC/Nursing Home</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>