force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Other_Education__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Other_Education__c</fullName>
    <description>How many members (total) participated in this year’s chapter education program?</description>
    <inlineHelpText>How many members (total) participated in this year’s chapter education program?</inlineHelpText>
    <label>Member Participation:Other Education</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>