force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Scholarships__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Scholarships__c</fullName>
    <description>How many people participated in chapter programs supporting education/scholarships?</description>
    <inlineHelpText>How many people participated in chapter programs supporting education/scholarships?</inlineHelpText>
    <label>Member Participation:Scholarships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>