force-app/main/default/objects/Program_Metrics__c/fields/Member_Participation_Tax_Aide__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Tax_Aide__c</fullName>
    <description>How many Members (total) participated this year with AARP&#39;s Tax-Aide program?</description>
    <inlineHelpText>How many Members (total) participated this year with AARP&#39;s Tax-Aide program?</inlineHelpText>
    <label>Member Participation:Tax-Aide</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>