force-app/main/default/objects/Program_Metrics__c/fields/Minimum_Board_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Board_Meetings__c</fullName>
    <description>Did your chapter hold at least 8 monthly meetings this year?</description>
    <inlineHelpText>Did your chapter hold at least 8 monthly meetings this year?</inlineHelpText>
    <label>Minimum Chapter Meetings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>