force-app/main/default/objects/Program_Metrics__c/fields/New_Members_Joined__c.field-meta.xml
<CustomField>
    <fullName>New_Members_Joined__c</fullName>
    <description>Number of new members that were added during this record&#39;s reporting period.</description>
    <inlineHelpText>Enter the number of new members added during this record&#39;s reporting period.</inlineHelpText>
    <label>New Members Joined</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>