force-app/main/default/objects/Program_Metrics__c/fields/Newsletter_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Expenses__c</fullName>
    <description>Newsletter related expenses spent this reporting period.</description>
    <inlineHelpText>Enter newsletter related expenses spent this reporting period.</inlineHelpText>
    <label>Newsletter Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>