force-app/main/default/objects/Program_Metrics__c/fields/Nominating_Committee__c.field-meta.xml
<CustomField>
    <fullName>Nominating_Committee__c</fullName>
    <description>Did your chapter have a Nominating Committee this year?</description>
    <inlineHelpText>Did your chapter have a Nominating Committee this year?</inlineHelpText>
    <label>Nominating Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>