force-app/main/default/objects/Program_Metrics__c/fields/NOTE_on_Treasurer_Report_Balance__c.field-meta.xml
<CustomField>
    <fullName>NOTE_on_Treasurer_Report_Balance__c</fullName>
    <description>This field is used to provide a specific note when Treasurer_Report_Balanced either = Yes, No, or NULL.</description>
    <formula>IF( ISPICKVAL( Treasurer_Report_Balanced__c , &quot;Yes&quot;), &quot;This chapter&#39;s treasurer report is balanced.&quot;,
IF( ISPICKVAL( Treasurer_Report_Balanced__c , &quot;No&quot;), &quot;ALERT! THIS CHAPTER&#39;S TREASURER REPORT IS NOT BALANCED. PLEASE CHECK THE UNBALANCED AMOUNT IN TREASURER REPORT SECTION IV.  SYSTEM TOTAL AND TOTAL ENDING BALANCE AMOUNTS MUST MATCH IN ORDER FOR THIS REPORT TO BE BALANCED.&quot;, NULL))</formula>
    <inlineHelpText>This field provides a specific note when the Treasurer Report is either balanced or unbalanced.</inlineHelpText>
    <label>NOTE on Treasurer Report Balance</label>
    <type>Text</type>
</CustomField>