force-app/main/default/objects/Program_Metrics__c/fields/Nov__c.field-meta.xml
<CustomField>
    <fullName>Nov__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nov</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Nov)</relationshipLabel>
    <relationshipName>Program_MetricsbcEt</relationshipName>
    <type>Lookup</type>
</CustomField>