force-app/main/default/objects/Program_Metrics__c/fields/Oct__c.field-meta.xml
<CustomField>
    <fullName>Oct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oct</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Oct)</relationshipLabel>
    <relationshipName>Program_Metrics9</relationshipName>
    <type>Lookup</type>
</CustomField>