force-app/main/default/objects/Program_Metrics__c/fields/Officer_Update__c.field-meta.xml
<CustomField>
    <fullName>Officer_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Officer Update</label>
    <type>Checkbox</type>
</CustomField>