force-app/main/default/objects/Program_Metrics__c/fields/Officer_Update_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Officer_Update_Report_Received__c</fullName>
    <label>Officer Update Report Received</label>
    <type>Date</type>
</CustomField>