force-app/main/default/objects/Program_Metrics__c/fields/Other_Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Expense_Description__c</fullName>
    <description>Description of other expenses (not already defined in this record) spent this reporting period.</description>
    <inlineHelpText>Enter description of other expenses (not already defined in this record) spent this reporting period.</inlineHelpText>
    <label>Other Expense Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>