force-app/main/default/objects/Program_Metrics__c/fields/Other_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Expenses__c</fullName>
    <description>Other expenses (not already defined in this record) amount spent this reporting period.</description>
    <inlineHelpText>Enter other expenses (not already defined in this record) amount spent this reporting period.</inlineHelpText>
    <label>Other Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>