force-app/main/default/objects/Program_Metrics__c/fields/Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Income__c</fullName>
    <description>Other income (not already defined in this record) amount earned this reporting period.</description>
    <inlineHelpText>Enter other income (not already defined in this record) amount earned this reporting period.</inlineHelpText>
    <label>Other Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>