force-app/main/default/objects/Program_Metrics__c/fields/Other_Income_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Description__c</fullName>
    <description>Description of other income (not already defined in this record) earned this reporting period.</description>
    <inlineHelpText>Enter description details of other income (not already defined in this record) earned this reporting period.</inlineHelpText>
    <label>Other Income Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>