force-app/main/default/objects/Program_Metrics__c/fields/Other_Partnerships__c.field-meta.xml
<CustomField>
    <fullName>Other_Partnerships__c</fullName>
    <description>Did your chapter sponsor any organizations or groups in support of community service this year?</description>
    <inlineHelpText>Did your chapter sponsor any organizations or groups in support of community service this year?</inlineHelpText>
    <label>Other Partnerships</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>