force-app/main/default/objects/Program_Metrics__c/fields/Paper_Amended__c.field-meta.xml
<CustomField>
    <fullName>Paper_Amended__c</fullName>
    <description>Number of paper-filed amended Federal returns.</description>
    <inlineHelpText>Number of paper-filed amended Federal returns.</inlineHelpText>
    <label>Paper Amended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>