force-app/main/default/objects/Program_Metrics__c/fields/Paper_Current__c.field-meta.xml
<CustomField>
    <fullName>Paper_Current__c</fullName>
    <description>Number of paper-filed, current tax year federal returns.</description>
    <inlineHelpText>Number of paper-filed, current tax year federal returns.</inlineHelpText>
    <label>Paper Current</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>