force-app/main/default/objects/Program_Metrics__c/fields/Paper_Federal__c.field-meta.xml
<CustomField>
    <fullName>Paper_Federal__c</fullName>
    <description>Number of accepted paper federal returns.</description>
    <inlineHelpText>Number of accepted paper federal returns.</inlineHelpText>
    <label>Paper Federal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>