force-app/main/default/objects/Program_Metrics__c/fields/Paper_Local_Only__c.field-meta.xml
<CustomField>
    <fullName>Paper_Local_Only__c</fullName>
    <description>Number of paper-filed, state/local-only returns for any tax year.</description>
    <inlineHelpText>Number of paper-filed, state/local-only returns for any tax year.</inlineHelpText>
    <label>Paper Local Only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>