force-app/main/default/objects/Program_Metrics__c/fields/Paper_Prior__c.field-meta.xml
<CustomField>
    <fullName>Paper_Prior__c</fullName>
    <description>Number of paper-filed, all prior years federal returns.</description>
    <inlineHelpText>Number of paper-filed, all prior years federal returns.</inlineHelpText>
    <label>Paper Prior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>