force-app/main/default/objects/Program_Metrics__c/fields/Paper_State__c.field-meta.xml
<CustomField>
    <fullName>Paper_State__c</fullName>
    <description>Number of accepted paper state returns.</description>
    <inlineHelpText>Number of accepted paper state returns.</inlineHelpText>
    <label>Paper State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>