force-app/main/default/objects/Program_Metrics__c/fields/Please_verify_Chapter_Name_and_Number__c.field-meta.xml
<CustomField>
    <fullName>Please_verify_Chapter_Name_and_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ALERT! Please ensure you have selected the correct chapter name and number before beginning data entry.</description>
    <inlineHelpText>Please confirm that you have selected the correct Chapter Program above by checking this box.</inlineHelpText>
    <label>Please verify Chapter Name and Number</label>
    <type>Checkbox</type>
</CustomField>