force-app/main/default/objects/Program_Metrics__c/fields/Primary_or_Secondary_60__c.field-meta.xml
<CustomField>
    <fullName>Primary_or_Secondary_60__c</fullName>
    <description>The number of accepted returns filed where the primary or secondary was age 60 or over.</description>
    <inlineHelpText>The number of accepted returns filed where the primary or secondary was age 60 or over.</inlineHelpText>
    <label>Primary or Secondary 60</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>