force-app/main/default/objects/Program_Metrics__c/fields/Produced_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Produced_Newsletter__c</fullName>
    <description>Does your chapter produce a newsletter?</description>
    <inlineHelpText>Does your chapter produce a newsletter?</inlineHelpText>
    <label>Produced Newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>