force-app/main/default/objects/Program_Metrics__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the lookup field for the Program object.</description>
    <inlineHelpText>In this field, search for and select the Program that is associated with this Program Metrics record.</inlineHelpText>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Program__c.Branding_Descriptor__c</field>
            <operation>equals</operation>
            <value>Chapters</value>
        </filterItems>
        <filterItems>
            <field>Program__c.Branding_Descriptor__c</field>
            <operation>equals</operation>
            <value>Tax-Aide</value>
        </filterItems>
        <filterItems>
            <field>Program__c.Branding_Descriptor__c</field>
            <operation>equals</operation>
            <value>Driver Safety</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Metrics</relationshipLabel>
    <relationshipName>Program_Metrics</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>