force-app/main/default/objects/Program_Metrics__c/fields/Program_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Program_Expenses__c</fullName>
    <label>Program Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>