force-app/main/default/objects/Program_Metrics__c/fields/Program_Income__c.field-meta.xml
<CustomField>
    <fullName>Program_Income__c</fullName>
    <description>Enter payment received for program materials through National Programs.</description>
    <inlineHelpText>Enter payment received for program materials through National Programs.</inlineHelpText>
    <label>Program Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>