force-app/main/default/objects/Program_Metrics__c/fields/Program_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Type_Description__c</fullName>
    <label>Program Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>