force-app/main/default/objects/Program_Metrics__c/fields/PTC_Count__c.field-meta.xml
<CustomField>
    <fullName>PTC_Count__c</fullName>
    <description>Count of Form 1040, Line 69 (Premium Tax Credit) &gt; $0.</description>
    <inlineHelpText>Count of Form 1040, Line 69 (Premium Tax Credit) &gt; $0.</inlineHelpText>
    <label>PTC Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>