force-app/main/default/objects/Program_Metrics__c/fields/Q_A__c.field-meta.xml
<CustomField>
    <fullName>Q_A__c</fullName>
    <description>Number of questions answered with no return filed.</description>
    <inlineHelpText>Number of questions answered with no return filed.</inlineHelpText>
    <label>Q &amp; A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>