force-app/main/default/objects/Program_Metrics__c/fields/Qualifying_Widower__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Widower__c</fullName>
    <description>Number of accepted returns claiming qualifying widower filing status.</description>
    <inlineHelpText>Number of accepted returns claiming qualifying widower filing status.</inlineHelpText>
    <label>Qualifying Widower</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>