force-app/main/default/objects/Program_Metrics__c/fields/Question_7__c.field-meta.xml
<CustomField>
    <fullName>Question_7__c</fullName>
    <inlineHelpText>Count of those who answered YES to question 7 on form 8965.</inlineHelpText>
    <label>Question 7</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>