force-app/main/default/objects/Program_Metrics__c/fields/Re_verify_Financial_Verification__c.field-meta.xml
<CustomField>
    <fullName>Re_verify_Financial_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking the check box, you are verifying the financial data is accurate and can be filed by AARP in a group return and none of the receipts inure to the benefit of any individual Chapter member.</description>
    <label>Re-verify Financial Verification</label>
    <type>Checkbox</type>
</CustomField>