force-app/main/default/objects/Program_Metrics__c/fields/Real_Estate_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Ownership__c</fullName>
    <description>Does chapter own real estate?</description>
    <inlineHelpText>Does chapter own real estate?</inlineHelpText>
    <label>Real Estate Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>