force-app/main/default/objects/Program_Metrics__c/fields/Report_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Period_Start_Date__c</fullName>
    <description>The start date for the reporting period specific to this record.</description>
    <inlineHelpText>Enter the start date for the reporting period covered in this record.</inlineHelpText>
    <label>Report Period Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>