force-app/main/default/objects/Program_Metrics__c/fields/Requesting_Direct_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Direct_Deposit__c</fullName>
    <description>Number of accepted returns filed requesting direct deposit.</description>
    <inlineHelpText>Number of accepted returns filed requesting direct deposit.</inlineHelpText>
    <label>Requesting Direct Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>