force-app/main/default/objects/Program_Metrics__c/fields/Responsibility_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Payment_Count__c</fullName>
    <description>Count of Form 1040, line 61 &gt; $0.</description>
    <inlineHelpText>Count of Form 1040, line 61 &gt; $0.</inlineHelpText>
    <label>Responsibility Payment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>