force-app/main/default/objects/Program_Metrics__c/fields/Salaries__c.field-meta.xml
<CustomField>
    <fullName>Salaries__c</fullName>
    <description>Salaries paid for this reporting period.</description>
    <inlineHelpText>Enter salaries amount paid for this reporting period.</inlineHelpText>
    <label>Salaries</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>