force-app/main/default/objects/Program_Metrics__c/fields/Sales_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Sales_Expenses__c</fullName>
    <description>Sales related expenses spent this reporting period.</description>
    <inlineHelpText>Enter sales related expenses spent this reporting period.</inlineHelpText>
    <label>Sales Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>