force-app/main/default/objects/Program_Metrics__c/fields/Sales_Income__c.field-meta.xml
<CustomField>
    <fullName>Sales_Income__c</fullName>
    <description>Enter the amount collected for items sold this reporting period.</description>
    <inlineHelpText>Enter the amount collected for items sold this reporting period.</inlineHelpText>
    <label>Sales Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>