force-app/main/default/objects/Program_Metrics__c/fields/Savings_Bonds__c.field-meta.xml
<CustomField>
    <fullName>Savings_Bonds__c</fullName>
    <description>The number of Savings Bonds requested.</description>
    <inlineHelpText>The number of Savings Bonds requested.</inlineHelpText>
    <label>Savings Bonds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>