force-app/main/default/objects/Program_Metrics__c/fields/Savings_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Savings_Ending_Balance__c</fullName>
    <description>Chapter&#39;s ending savings account balance for this report period.</description>
    <inlineHelpText>Enter this chapter&#39;s ending savings account balance for this report period.</inlineHelpText>
    <label>Savings Ending Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>