force-app/main/default/objects/Program_Metrics__c/fields/Savings_Starting_Balance__c.field-meta.xml
<CustomField>
    <fullName>Savings_Starting_Balance__c</fullName>
    <description>Enter this Chapter’s starting savings balance as of January 1.</description>
    <inlineHelpText>Enter this Chapter’s starting savings balance as of January 1.</inlineHelpText>
    <label>Savings Starting Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>