force-app/main/default/objects/Program_Metrics__c/fields/Schedule_C__c.field-meta.xml
<CustomField>
    <fullName>Schedule_C__c</fullName>
    <description>Number of accepted returns claiming Schedule C.</description>
    <inlineHelpText>Number of accepted returns claiming Schedule C.</inlineHelpText>
    <label>Schedule C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>