force-app/main/default/objects/Program_Metrics__c/fields/Sep__c.field-meta.xml
<CustomField>
    <fullName>Sep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Metrics (Sep)</relationshipLabel>
    <relationshipName>Program_Metrics8</relationshipName>
    <type>Lookup</type>
</CustomField>