force-app/main/default/objects/Program_Metrics__c/fields/SIDN__c.field-meta.xml
<CustomField>
    <fullName>SIDN__c</fullName>
    <description>Read-only field with value derived from SIDN field on program object.</description>
    <formula>Program__r.SIDN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read-only field with value derived from SIDN field on related program record.</inlineHelpText>
    <label>SIDN</label>
    <type>Text</type>
</CustomField>