force-app/main/default/objects/Program_Metrics__c/fields/Single__c.field-meta.xml
<CustomField>
    <fullName>Single__c</fullName>
    <description>Number of accepted returns claiming single filing status.</description>
    <inlineHelpText>Number of accepted returns claiming single filing status.</inlineHelpText>
    <label>Single</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>