force-app/main/default/objects/Program_Metrics__c/fields/Social_Event_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Social_Event_Expenses__c</fullName>
    <description>Social event related expenses spent this reporting period.</description>
    <inlineHelpText>Enter social event related expenses spent this reporting period.</inlineHelpText>
    <label>Social Event Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>