force-app/main/default/objects/Program_Metrics__c/fields/Social_Event_Income__c.field-meta.xml
<CustomField>
    <fullName>Social_Event_Income__c</fullName>
    <description>Enter the income amount collected from social events this reporting period.</description>
    <inlineHelpText>Enter the income amount collected from social events this reporting period.</inlineHelpText>
    <label>Social Event Income</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>