force-app/main/default/objects/Program_Metrics__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Chapter program state value from related program record.</description>
    <formula>TEXT(Program__r.Legal_Incorporation_State__c)</formula>
    <inlineHelpText>State where this chapter is located.</inlineHelpText>
    <label>State</label>
    <type>Text</type>
</CustomField>