force-app/main/default/objects/Program_Metrics__c/fields/State_Accepted__c.field-meta.xml
<CustomField>
    <fullName>State_Accepted__c</fullName>
    <description>The unique number of state accepted e-files.</description>
    <inlineHelpText>The unique number of state accepted e-files.</inlineHelpText>
    <label>State Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>