force-app/main/default/objects/Program_Metrics__c/fields/State_Governance_Compliant__c.field-meta.xml
<CustomField>
    <fullName>State_Governance_Compliant__c</fullName>
    <description>Is your chapter in compliance with all state government reporting requirements?</description>
    <inlineHelpText>Is your chapter in compliance with all state government reporting requirements?</inlineHelpText>
    <label>State Governance Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>