force-app/main/default/objects/Program_Metrics__c/fields/System_Total__c.field-meta.xml
<CustomField>
    <fullName>System_Total__c</fullName>
    <description>(Total starting balance + total income) - total expenses paid</description>
    <formula>(Total_Starting_Balance__c + Total_Income__c) -  Total_Expenses_Paid__c</formula>
    <inlineHelpText>Chapter&#39;s system total = (total starting balance + total income) - total expenses paid</inlineHelpText>
    <label>System Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>