force-app/main/default/objects/Program_Metrics__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>SPEC Territory as identified in STARS site table.</description>
    <inlineHelpText>SPEC Territory as identified in STARS site table.</inlineHelpText>
    <label>Territory</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>