force-app/main/default/objects/Program_Metrics__c/fields/Territory_and_Branch__c.field-meta.xml
<CustomField>
    <fullName>Territory_and_Branch__c</fullName>
    <inlineHelpText>SPEC Territory and Branch as identified in the STARS site table.</inlineHelpText>
    <label>Territory and Branch</label>
    <length>6</length>
    <type>Text</type>
</CustomField>