force-app/main/default/objects/Program_Metrics__c/fields/Total_Add_CTC__c.field-meta.xml
<CustomField>
    <fullName>Total_Add_CTC__c</fullName>
    <description>Total dollar amount of ACTC claimed on accepted returns.</description>
    <inlineHelpText>Total dollar amount of ACTC claimed on accepted returns.</inlineHelpText>
    <label>Total Add CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>